[package]
name = "ecb_data_api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
polars = { version = "0.34.0", features = ["csv", "json"] }
clap = { version = "4.1", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
chrono = "0.4.37"